@@ -1,6 +1,6 @@
 Begin4
 Title: libkdcraw
-Version: 0.1.5-svn
+Version: 0.1.5
 Entered-date: 2008-03-09
 Description: A C++ library to decode RAW pictures using dcraw command line program. This library is used by digiKam and Kipi-plugins.
 Keywords: kde image raw decode dcraw digiKam kipi-plugins
